--- a/app/src/main/res/layout/tolkbilag2_view.xml
+++ b/app/src/main/res/layout/tolkbilag2_view.xml
@@ -117,6 +117,7 @@
         android:ems="10"
         android:focusable="false"
         android:editable="false"
+        android:enabled="false"
         android:id="@+id/Sprog"
         android:layout_below="@+id/Tiltid"
         android:layout_alignParentStart="true"
@@ -128,6 +129,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:editable="false"
+        android:enabled="false"
         android:textColor="#000000"
         android:id="@+id/Dato"
         android:hint="Dato *"
