--- a/app/src/main/res/layout/tolkbilag2_view.xml
+++ b/app/src/main/res/layout/tolkbilag2_view.xml
@@ -129,6 +129,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:editable="false"
+        android:enabled="false"
         android:textColor="#000000"
         android:id="@+id/Dato"
         android:hint="Dato *"
