Tilføjer ID for hver dropdown selected

--- a/app/src/main/res/layout/tolkbilag2_view.xml
+++ b/app/src/main/res/layout/tolkbilag2_view.xml
@@ -139,4 +139,12 @@
         android:layout_toStartOf="@+id/Ydelsenstype"
         android:layout_alignParentEnd="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Sprog"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView2"
+        android:text="Counter" />
+
 </RelativeLayout>
