--- a/app/src/main/res/layout/tolkbilag3_view.xml
+++ b/app/src/main/res/layout/tolkbilag3_view.xml
@@ -130,4 +130,37 @@
         android:id="@+id/evaText1"
         android:layout_below="@+id/laegeydernr"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/evaComment"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView1" />
+
+    <TextView
+        android:text="Counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_below="@+id/evaComment"
+        android:layout_alignEnd="@+id/textView" />
+
+    <TextView
+        android:text="Counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/evaComment"
+        android:layout_alignEnd="@+id/evaComment"
+        android:id="@+id/textView4" />
+
+    <TextView
+        android:text="Counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:layout_below="@+id/evaComment"
+        android:layout_toEndOf="@+id/evaText4" />
+
 </RelativeLayout>
