tilføjet valueUpdate for at updater ydelsens omfang og type value

--- a/app/src/main/res/layout/datovaelger_view.xml
+++ b/app/src/main/res/layout/datovaelger_view.xml
@@ -17,8 +17,8 @@
                 android:id="@android:id/tabs"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_weight="0.01" />
+                android:layout_weight="0.01"
+                android:visibility="gone" />
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
