--- a/app/src/main/res/layout/laegensunderskrift_view.xml
+++ b/app/src/main/res/layout/laegensunderskrift_view.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:signature="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,84 +11,84 @@
 
 
     <RelativeLayout
+        android:id="@+id/signature_pad_container"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/buttons_container"
-        android:id="@+id/signature_pad_container">
+        android:layout_above="@+id/buttons_container">
 
         <FrameLayout
+            android:id="@+id/frameLayout"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            android:layout_marginBottom="8dp"
             android:layout_above="@+id/signature_pad_description"
-            android:id="@+id/frameLayout" />
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/darker_gray" />
 
         <TextView
             android:id="@+id/signature_pad_description"
             android:layout_width="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/darker_gray"
-            android:layout_marginBottom="16dp"
             android:layout_alignParentBottom="true"
-            android:text="Jeg acceptere følgende betingelser" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="16dp"
+            android:text="Jeg acceptere følgende betingelser"
+            android:textColor="@android:color/darker_gray" />
 
         <com.github.gcacace.signaturepad.views.SignaturePad
+            android:id="@+id/signature_pad"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="@drawable/popupchoosedesign"
-            android:id="@+id/signature_pad"
             android:layout_above="@+id/frameLayout"
             android:layout_alignParentTop="true"
             android:layout_marginBottom="10dp"
+            android:background="@drawable/popupchoosedesign"
             android:backgroundTint="@color/RED_COLOR" />
 
         <TextView
             android:id="@+id/signature_pad_description0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/darker_gray"
-            android:layout_alignParentBottom="true" />
+            android:layout_alignParentBottom="true"
+            android:textColor="@android:color/darker_gray" />
 
         <TextView
             android:id="@+id/signature_pad_description1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textStyle="bold"
-            android:text="Lægens Underskrift"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:text="Lægens Underskrift"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/buttons_container"
-        android:paddingTop="16dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:paddingTop="16dp">
 
         <ImageButton
-            android:background="@drawable/roundringredbutton"
+            android:id="@+id/provigen"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:id="@+id/provigen"
-            android:src="@drawable/ic_delete_black_48dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:background="@drawable/roundringredbutton"
+            android:src="@drawable/ic_delete_black_48dp" />
 
         <ImageButton
-            android:background="@drawable/roundringgreenbutton"
+            android:id="@+id/send"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:id="@+id/send"
-            android:src="@drawable/ic_send_black_48dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:background="@drawable/roundringgreenbutton"
+            android:src="@drawable/ic_send_black_48dp" />
 
     </RelativeLayout>
 
