--- a/app/src/main/res/layout/velkommen_view.xml
+++ b/app/src/main/res/layout/velkommen_view.xml
@@ -11,11 +11,11 @@
     tools:context="com.example.jiahua.regionbilagdesign.Activity.MainActivity">
 
     <Button
+        android:id="@+id/UdfyldBilag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="UdfyldBilag"
-        android:id="@+id/UdfyldBilag"
-        android:layout_marginTop="170dp" />
+        android:layout_marginTop="170dp"
+        android:text="UdfyldBilag" />
 
 </RelativeLayout>
